# goit_llm

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/conf/: config.py  messages.py
app/db/: db.py  models.py
app/repository/: basic.py  chat.py  history.py  pdffile.py  users.py
app/routes/: auth.py  chat.py  history.py  pages.py  pdffile.py  users.py
app/schemas/: chat.py  history.py  pdffile.py  user.py
app/services/: history_controller.py  images.py  pdf_controller.py  roles.py  textprocessor.py
app/services/auth/: password.py  token.py  user.py
app/services/chat/: chat_controller.py
app/services/chat/templates/: chat.html
app/services/loggs/: loger.py
app/static/styles/: normalize.css  styles.css
app/templates/: base.html  chat.html  chat1.html  chat2.html  chats.html  index.html  index0.html  login.html  login0.html  signup.html  signup0.html  upload.html
app/utils/: main.py
templates/: chat.html
